# k8s-integration

./: .gitignore  Makefile  ansible.cfg  pyproject.toml
ansible/: hosts.yml  prune.yml  vars.yml
ansible/collections/: requirements.yml
ansible/kind/: config.yml  destroy.yml  install.yml
ansible/kind/templates/pdns/: namespace.j2.yml
ansible/kind/templates/pdns/recursor/: configmap.j2.yml  deployment.j2.yml
ansible/templates/: compose.j2.yml
