[tool.poetry]
name = "wpnops.rtd"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
docker-compose = "^1.29.2"
openshift = "^0.13.1"

[tool.poetry.dev-dependencies]
tox = "^3.24.5"
ansible = "^5.5.0"
netaddr = "^0.8.0"
openshift = "^0.13.1"
docker = "^5.0.3"
"github3.py" = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
